app/assets/stylesheets/scrollbar.scss
.serverBar::-webkit-scrollbar,
.messageHistory::-webkit-scrollbar {
    width: 14px;
}

.serverBar::-webkit-scrollbar-track,
.messageHistory::-webkit-scrollbar-track {
    background-clip: padding-box;
    border-width: 3px;
    border-style: solid;
    border-radius: 7px;
}

.serverBar::-webkit-scrollbar-thumb,
.messageHistory::-webkit-scrollbar-thumb {
    background-color: var(--background-primary);
    border: 3px solid var(--background-tertiary);
    border-radius: 7px;
}

.serverBar::-webkit-scrollbar-track-piece,
.messageHistory::-webkit-scrollbar-track-piece {
    background-color: var(--background-secondary);
    border: 3px solid var(--background-tertiary);
    border-radius: 7px;
}

.serverBar::-webkit-scrollbar-corner,
.messageHistory::-webkit-scrollbar-corner {
    background-color: transparent;
}

/////////////////////////////////////////////////////////
// .membersList
// .channelIndex
/////////////////////////////////////////////////////////

.membersList::-webkit-scrollbar,
.channelIndex::-webkit-scrollbar {
    width: 7px;
}

.membersList::-webkit-scrollbar-track,
.channelIndex::-webkit-scrollbar-track {
    display: none;
}

.membersList::-webkit-scrollbar-thumb,
.channelIndex::-webkit-scrollbar-thumb {
    background-color: var(--background-primary);
    border: 2px solid var(--background-secondary);
    border-radius: 7px;
    display: none;
}

.membersList:hover::-webkit-scrollbar-thumb,
.channelIndex:hover::-webkit-scrollbar-thumb {
    display: block;
}

.membersList::-webkit-scrollbar-track-piece,
.channelIndex::-webkit-scrollbar-track-piece {
    background-color: var(--background-secondary);
    border: 3px solid var(--background-secondary);
    border-radius: 7px;
}

.membersList::-webkit-scrollbar-corner,
.channelIndex::-webkit-scrollbar-corner {
    background-color: transparent;
}

